<resources>
    <string name="app_name">NABL</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>

    <string name="manageProjectsClientsTitle">Manage projects/clients</string>

    <string-array name="sideDrawerMenuItems">
        <item>Log hours</item>
        <item>Manage projects/clients</item>
        <item>Summary</item>
        <item>Export</item>
        <item>Settings</item>
        <item>Sign out</item>
    </string-array>

    <string-array name="manageProjectAndClientsSpinner">
        <item>Projects</item>
        <item>Clients</item>
    </string-array>

    <string-array name="actionBarMenuOptions">
        <item name="modifyOption">Modify</item>
        <item name="deleteOption">Delete</item>
    </string-array>

    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="register">Register</string>
    <string name="phone">Phone</string>
    <string name="street">Street</string>
    <string name="zipcode">Zipcode</string>
    <string name="number">Street Number</string>
    <string name="email">Email</string>
    <string name="city">City</string>
    <string name="save">Save</string>
    <string name="options">Options</string>
    <string name="projectId">Project Id</string>
    <string name="project">Project</string>
    <string name="client">Client</string>
    <string name="name">Name</string>
    <string name="projectName">Project name</string>
    <string name="description">Description</string>
    <string name="start">Start date</string>
    <string name="end">End date</string>
    <string name="status">Status</string>
    <string name="organisation">Organisation</string>
    <string name="planning">Planning</string>
    <string name="started">Started</string>
    <string name="finished">Finished</string>
    <string name="inputInvalid">Some fields are invalid/not filled</string>
    <string name="address">Address</string>
    <string name="workspaceSat">Current company selected</string>
    <string name="workspaceNotSat">Company not specified in settings</string>
    <string name="hourLogSaved">Log entry saved</string>
    <string name="listEmpty">Nothing to show</string>

    <!-- EXCEL-related names -->
    <string name="headerDate">Date</string>
    <string name="headerHours">Hours</string>
    <string name="headerStart">Start</string>
    <string name="headerEnd">End</string>
    <string name="headerOverTime">Over time</string>
    <string name="headerBreak">Break</string>
    <string name="headerTotal">Total</string>
    <string name="weekendTime">Weekend</string>
    <string name="holyTime">Holy</string>
    <string name="sheetTitle">Time Sheet</string>
    <string name="headerDescription">Work description</string>


    <string name="successDeleted">Deletion successful</string>
    <string name="updateComplete">Update complete</string>
    <string name="unableTofetchResource">Unable to fetch resource</string>
    <string name="projectList">Choose wanted project</string>
    <string name="clientList">Choose wanted client</string>
    <string name="export">Export the file</string>
    <string name="exportProjectsTitle">Export your projects</string>
    <string name="invalidDate">Invalid date</string>
    <string name="invalidTime">Invalid time</string>

    <string name="loggingView">Start Logging</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="startTime">Start time</string>
    <string name="endTime">End time</string>
    <string name="breaks">Breaks</string>
    <string name="overTime">Over Time</string>
    <string name="specialTime">Special Time</string>
    <string name="holiday">Holiday</string>
    <string name="weekend">Weekend</string>
    <string name="newLogging">New Log</string>
    <string name="hours">Hours:</string>

    <string name="type" translatable="false">type</string>
    <string name="id" translatable="false">id</string>
    <string name="userID">userId</string>


    <!-- Strings related to company registration -->
    <string name="companyLabel">Company name</string>
    <string name="companyOrgNumber">Organisation Number</string>
    <string name="makeCompany">Submit Company</string>
    <string name="createCompanyTitle">Register a company</string>

    <string-array name="breakTiming">
        <item>No Breaks</item>
        <item>30 Minutes</item>
        <item>1 Hour</item>
        <item>1,5 Hours</item>
        <item>2 Hours</item>
    </string-array>

    <string-array name="overTiming">
        <item>No Overtime</item>
        <item>30 Minutes</item>
        <item>1 Hour</item>
        <item>1,5 Hours</item>
        <item>2 Hours</item>
        <item>2,5 Hours</item>
        <item>3 Hours</item>
        <item>3,5 Hours</item>
        <item>4 Hours</item>
        <item>4,5 Hours</item>
        <item>5 Hours</item>
        <item>5,5 Hours</item>
        <item>6 Hours</item>
        <item>6,5 Hours</item>
        <item>7 Hours</item>
        <item>7,5 Hours</item>
        <item>8 Hours</item>
    </string-array>

    <string name="descriptionHint">Write a short summary</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="wantTodDeleteString">Do you want to delete this company?</string>
    <string name="deleteTitleString">Delete organisation</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <!-- Strings for summary view -->
    <string name="summaryHoursTotal">total</string>
    <string name="summaryOverTime">OT</string>
    <string name="summaryHours">hours</string>
    <string name="summaryTitle">Summary</string>


    <string name="date">Date</string>
    <string name="Clock">Clock</string>
    <string name="totalHours">Total</string>
    <string name="hourIndicator">h</string>


</resources>
